--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,29 +1,34 @@
-# This file configures the analyzer, which statically analyzes Dart code to
-# check for errors, warnings, and lints.
-#
-# The issues identified by the analyzer are surfaced in the UI of Dart-enabled
-# IDEs (https://dart.dev/tools#ides-and-editors). The analyzer can also be
-# invoked from the command line by running `flutter analyze`.
-
-# The following line activates a set of recommended lints for Flutter apps,
-# packages, and plugins designed to encourage good coding practices.
-include: package:flutter_lints/flutter.yaml
+include: package:effective_dart/analysis_options.yaml
 
 linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at
-  # https://dart-lang.github.io/linter/lints/index.html.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    parameter_assignments: true
+    unrelated_type_equality_checks: true
+    public_member_api_docs: false
 
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+analyzer:
+  exclude:
+    - lib/**/*.*.dart
+    - packages/**/*.*.dart
+  strong-mode:
+    implicit-casts: false
+    implicit-dynamic: false
+  errors:
+    # error
+    unrelated_type_equality_checks: error
+    missing_required_param: error
+    only_throw_errors: error
+    missing_return: error
+    missing_enum_constant_in_switch: error
+    # warn
+    parameter_assignments: warning
+    use_rethrow_when_possible: warning
+    # ignore
+    use_setters_to_change_properties: ignore
+    avoid_setters_without_getters: ignore
+    one_member_abstracts: ignore
+    avoid_classes_with_only_static_members: ignore
+    avoid_init_to_null: ignore
+    avoid_types_on_closure_parameters: ignore
+    avoid_returning_null: ignore
+    prefer_function_declarations_over_variables: ignore
