--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,15 +20,15 @@ dependencies:
   google_fonts: ^3.0.1
   provider: ^6.0.3
   rxdart: ^0.27.5
-  geoflutterfire: ^3.0.2
+  geoflutterfire: ^3.0.3
   json_annotation: ^4.6.0
   google_place: ^0.4.7
   firebase_auth: ^3.6.2
+  font_awesome_flutter: ^10.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
   build_runner: ^2.2.0
   json_serializable: ^6.3.1
   effective_dart: ^1.3.2
