--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   google_place: ^0.4.7
   firebase_auth: ^3.6.2
   font_awesome_flutter: ^10.1.0
+  freezed_annotation: ^2.1.0
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
@@ -32,6 +34,7 @@ dev_dependencies:
   build_runner: ^2.2.0
   json_serializable: ^6.3.1
   effective_dart: ^1.3.2
+  freezed: ^2.1.0+1
 
 flutter:
   uses-material-design: true
