--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   freezed_annotation: ^2.1.0
   email_validator: ^2.1.17
+  beamer: ^1.5.0
 
 dev_dependencies:
   flutter_test:
