--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,5 +40,17 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  #   - assets/fonts/Ubuntu
+  #   - assets/fonts/Ultra
+  fonts:
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter/static/Inter-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Inter/static/Inter-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Inter/static/Inter-SemiBold.ttf
+          weight: 600
+    - family: Ultra
+      fonts:
+        - asset: assets/fonts/Ultra/Ultra-Regular.ttf
