--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   freezed_annotation: ^2.1.0
   email_validator: ^2.1.17
   beamer: ^1.5.0
+  flutter_svg: ^1.1.3
+  auto_size_text: ^3.0.0
+  mask_text_input_formatter: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -40,8 +43,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   # assets:
-  #   - assets/fonts/Ubuntu
-  #   - assets/fonts/Ultra
+  #   - assets/icons/logo.svg
   fonts:
     - family: Inter
       fonts:
