--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dev_dependencies:
   json_serializable: ^6.3.1
   effective_dart: ^1.3.2
   freezed: ^2.1.0+1
+  mocktail: ^0.3.0
 
 flutter:
   uses-material-design: true
