--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_svg: ^1.1.3
   auto_size_text: ^3.0.0
   mask_text_input_formatter: ^2.4.0
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -43,8 +44,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  # assets:
-  #   - assets/icons/logo.svg
+  assets:
+    - .env
   fonts:
     - family: Inter
       fonts:
