:sparkles: FEATURE: Create custom logo and modify app name
Signed-off-by: Luca Dillenburg <luca.assumpcao.dillenburg@gmail.com>

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.do_app">
    <application
-        android:label="do_app"
+        android:label="Do."
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
