--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   image_picker: ^0.8.5+3
   firebase_storage: ^10.3.4
+  tinycolor2: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,8 @@ flutter:
   uses-material-design: true
   assets:
     - .env
+    - assets/img/picture-inverted.svg
+    - assets/img/picture.svg
   fonts:
     - family: Inter
       fonts:
