--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
     - .env
     - assets/img/picture-inverted.svg
     - assets/img/picture.svg
+    - assets/img/menu.svg
   fonts:
     - family: Inter
       fonts:
