--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -28,6 +28,8 @@
 		<true/>
 		<key>NSPhotoLibraryUsageDescription</key>
 		<string>O acesso a câmera possibilta que o usuário adicione sua foto de perfil.</string>
+		<key>NSLocationWhenInUseUsageDescription</key>
+		<string>Precisamos da sua localização para encontrar eventos na sua região.</string>
 		<key>UILaunchStoryboardName</key>
 		<string>LaunchScreen</string>
 		<key>UIMainStoryboardFile</key>
