:bug: FIX: Change package name of android app to br.dillenburg.doapp
Signed-off-by: Luca Dillenburg <luca.assumpcao.dillenburg@gmail.com>

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.do_app">
+    package="br.dillenburg.doapp">
    <application
         android:label="Do."
         android:name="${applicationName}"
