--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dev_dependencies:
   mocktail: ^0.3.0
   flutter_launcher_icons: ^0.10.0
   flutter_native_splash: ^2.2.7
+  change_app_package_name: ^1.1.0
 
 flutter:
   uses-material-design: true
