:bug: FIX: Fix iOS icon (without alpha layer)
Signed-off-by: Luca Dillenburg <luca.assumpcao.dillenburg@gmail.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: Create public events to practice sports with other people.
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 1.0.0+2
 
 flutter_native_splash:
   color: "#202233"
@@ -14,6 +14,7 @@ flutter_native_splash:
 flutter_icons:
   android: true
   ios: true
+  remove_alpha_ios: true
   image_path: "assets/config/icon.png"
   web:
     generate: true
