--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   image_picker: ^0.8.5+3
   firebase_storage: ^10.3.4
   tinycolor2: ^2.1.0
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +63,9 @@ dev_dependencies:
   flutter_launcher_icons: ^0.10.0
   flutter_native_splash: ^2.2.7
   change_app_package_name: ^1.1.0
+  firebase_auth_mocks: ^0.8.7
+  firebase_storage_mocks: ^0.5.1
+  fake_cloud_firestore: ^1.3.2
 
 flutter:
   uses-material-design: true
