--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - .env
     - assets/img/picture-inverted.svg
     - assets/img/picture.svg
     - assets/img/menu.svg
